Fix header flexbox spacing and form font

--- a/src/css/_mixins.scss
+++ b/src/css/_mixins.scss
@@ -26,6 +26,7 @@
         font-size: 30px;
     }
     label {
+        font-family: $primary-font;
         font-size: 20px;
     }
     input, select {
